# RustWeb3Backend

./: Cargo.toml
src/: lib.rs  main.rs
src/models/: usermodel.rs
src/service/: userservice.rs
