[package]
name = "events"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.136"
dotenv = "0.15.0"
alloy = { version = "0.1.2", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
ethereum-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
cron = "0.12.1"
chrono = "0.4.38"
chrono-tz = "0.9.0"

[dependencies.mongodb]
    version = "2.2.0"
    default-features = false
    features = ["sync"] 
